fix issues in dark mode toggle

--- a/admin-web/src/index.css
+++ b/admin-web/src/index.css
@@ -1,10 +1,12 @@
 @import "tailwindcss";
 
+@custom-variant dark (&:where(.dark, .dark *));
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family:
+    -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu",
+    "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   transition: background-color 0.3s ease;
@@ -15,8 +17,8 @@ body.dark {
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family:
+    source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
 
 @theme inline {
@@ -25,20 +27,20 @@ code {
   --color-primary-200: #fcc9d4;
   --color-primary-300: #f99bb4;
   --color-primary-400: #f4628d;
-  --color-primary-500: #E06B80;
-  --color-primary-600: #CD2C58;
+  --color-primary-500: #e06b80;
+  --color-primary-600: #cd2c58;
   --color-primary-700: #b01d45;
   --color-primary-800: #93193b;
   --color-primary-900: #7d1835;
 
-  --color-primary: #CD2C58;
+  --color-primary: #cd2c58;
 
-  --color-secondary: #E06B80;
-  --color-secondary-light: #FFC69D;
-  --color-secondary-lighter: #FFE6D4;
+  --color-secondary: #e06b80;
+  --color-secondary-light: #ffc69d;
+  --color-secondary-lighter: #ffe6d4;
 
-  --color-accent: #FFC69D;
-  --color-accent-light: #FFE6D4;
+  --color-accent: #ffc69d;
+  --color-accent-light: #ffe6d4;
 }
 
 .scrollbar-hide {
